WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311593
WebRTC Media capabilities do not report power efficient AV1 decode
https://bugs.webkit.org/show_bug.cgi?id=311593
Summary
WebRTC Media capabilities do not report power efficient AV1 decode
jbedwell
Reported
2026-04-06 14:09:39 PDT
Overview On iOS and Mac the Safari media capabilities decoding info API (
https://developer.mozilla.org/en-US/docs/Web/API/MediaCapabilities/decodingInfo
) underreports AV1 capabilities. When queried for WebRTC it reports "supported" for AV1 on M3+ and A18+, but it returns false for "smooth" and "powerEfficient". Generally the "smooth" and "powerEfficient" fields should be true when hardware decode is available, and it is. This can be an issue for web applications that attempt to select a codec that the client has hardware decode support for. Steps to Reproduce await navigator.mediaCapabilities.decodingInfo({type: 'webrtc', video: {contentType: 'video/AV1', width: 1920, height: 1080, bitrate: 10_000, framerate: 60}}) Actual Results On M3+ and A18+ devices (which have hardware AV1 decode support) AV1 is reported as "supported" but not "smooth" or "powerEfficient". Queries for other types than 'webrtc' (ex. 'media-source') seem to also underreport AV1 capabilities. Expected Results On M3+ and A18+ devices AV1 should be reported as "supported" as well as "smooth" and "powerEfficient". Build Date & Hardware Tested on iPhone 15 Pro + iOS 26.4 and M4 MacBook Pro + MacOS 26.4. Additional Builds and Platforms On M4 MacBook Pro + MacOS 26.4, Chrome 146 reports AV1 decode as "smooth" and "powerEfficient".
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-13 14:10:12 PDT
<
rdar://problem/174686183
>
jbedwell
Comment 2
2026-04-30 10:30:37 PDT
Enabling the "WebRTC AV1 codec" feature flag does not fix this issue.
youenn fablet
Comment 3
2026-05-19 00:25:33 PDT
AV1 for regular playback (mse here) seems to work for me: const configuration = { type: 'media-source', video: { contentType: 'video/mp4; codecs="av01.0.05M.08"', width: 1080, height: 720, bitrate: 3000000, framerate: 30 } };
youenn fablet
Comment 4
2026-05-19 00:25:46 PDT
https://github.com/WebKit/WebKit/pull/65110
EWS
Comment 5
2026-05-19 00:37:47 PDT
Committed
313468@main
(6b68426e27af): <
https://commits.webkit.org/313468@main
> Reviewed commits have been landed. Closing PR #65110 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug