WebRTC Media capabilities do not report power efficient AV1 decode rdar://174686183 https://bugs.webkit.org/show_bug.cgi?id=311593

Reviewed by Eric Carlson.

We set powerEfficient for AV1 based on whether HW AV1 support is enabled.
We introduce a virtual method in LibWebRTCProvider, which gets overriden at WebKit level to get the information from LibWebRTCCodecs.
We add an internals API routine so that we can write a test.

Covered by updated test.

Canonical link: https://commits.webkit.org/313468@main