Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.h
@@ -109,6 +109,8 @@ public:
     WEBCORE_EXPORT virtual void setVP9HardwareSupportForTesting(std::optional<bool> value) { m_supportsVP9VTBForTesting = value; }
     virtual bool isSupportingVP9HardwareDecoder() const { return m_supportsVP9VTBForTesting.value_or(false); }
 
+    virtual bool isSupportingAV1HardwareDecoder() const { return false; }
+
     WEBCORE_EXPORT void NODELETE disableEnumeratingAllNetworkInterfaces();
     WEBCORE_EXPORT void NODELETE enableEnumeratingAllNetworkInterfaces();
     bool NODELETE isEnumeratingAllNetworkInterfacesEnabled() const;
